cd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <SERVICE>
  namespace: <NAMESPACE>
  labels:
    application: <SERVICE>
spec:
  type: NodePort
  selector:
    application: <SERVICE>
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
