cd/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: <SERVICE>
  namespace: <NAMESPACE>
  labels:
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "<URL>"
    http:
      paths:
      - path: /
        backend:
          serviceName: <SERVICE>
          servicePort: 8080
  tls:
    - hosts:
      - "<URL>"
      secretName: tls.wildcard.<NAMESPACE>
